# ClawDone

./: .env.example  .gitignore  AGENT.md  AGENTSMEMORY.md  DONE.md  Dockerfile  LICENSE  QuickStart.md  README.md  README.zh-CN.md  ROADMAP.md  RelatedWorks.md  TODO.md  compose.yaml  frontends.md  prompt.md  pyproject.toml
.github/workflows/: deploy-pages.yml  quality-gates.yml
clawdone/: __init__.py  app.py  cli.py  html.py  local_tmux.py  mcp_agent_server.py  mcp_server.py  remote.py  runtime.py  store.py  supervisor.py  utils.py  web.py
clawdone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clawdone/html/: __init__.py  body.py  page.py  script.py  styles.py
clawdone/store/: __init__.py  core.py  metrics.py  normalize.py  profile_store.py  sharing.py  todos.py
clawdone/web/: __init__.py  app.py  base.py  http.py  supervisor.py  support.py  todos.py
docs/: app.js  index.html  styles.css
pocketclaw/: __init__.py  app.py  cli.py  html.py  remote.py  store.py  web.py
scripts/: quality_gates.py
tests/: test_app.py
wechat-bridge/: README.md  config.example.json  package-lock.json  package.json
wechat-bridge/src/: bridge.mjs  clawdone-client.mjs  config.mjs  formatting.mjs  session-store.mjs
wechat-bridge/test/: bridge-module.test.mjs  config.test.mjs  formatting.test.mjs  session-store.test.mjs
