[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocketclaw"
version = "0.2.0"
description = "Mobile-friendly voice control for SSH/tmux-hosted coding agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "PocketClaw Contributors" }
]
dependencies = [
  "paramiko>=3.4,<4",
]

[project.scripts]
pocketclaw = "pocketclaw.__main__:main"

[tool.setuptools]
packages = ["pocketclaw"]
